fixed a bug in dark mode switch

--- a/src/components/AboutMe/aboutMe.css
+++ b/src/components/AboutMe/aboutMe.css
@@ -34,3 +34,32 @@
         margin-bottom: 500px;
     }
 }
+@media only screen and (max-width: 930px) {
+    .about-me-info-container {
+        margin-top: 120px;
+    }
+}
+@media only screen and (max-width: 700px) {
+    .about-me-info-container {
+        margin-top: 150px;
+    }
+}
+@media only screen and (max-width: 443px) {
+    .about-me-container {
+        margin-left: 75px;
+    }
+
+    .about-me-container h1 {
+        font-size: 25px;
+        margin-bottom: 10px;
+    }
+    .about-me-container h2 {
+        font-size: 15px;
+    }
+    .about-me-container p {
+        font-size: 10px;
+    }
+    .about-me-info-container {
+        margin-top: 0px;
+    }
+}
